added the jpg & svg badges to show comparison

--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
 
-  <title>Authoring Week 2 - Icons</title>
+  <title>SVG with JS</title>
 </head>
 <body>
+  <main>
+    <h1 class="hidden">Responsive SVG Example</h1>
+    <h2 class="main-headline">Using Flexbox & SVG for Layout</h2>
 
-  <h1>Authoring Week 2 - Icons Homepage</h1>
+    <section id="raster-vector">
+      <h2 class="hidden">vector vs svg</h2>
+      <h3>SVG as raster & vector</h3>
 
-  <p>Take a look at all these fantastic icons</p>
+      <div id="image-container">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg">
+        <img src="images/newBadge.svg" alt="badge as vector - this is the svg">
+      </div>
+    </section>
+  </main>
 
 
 <<script src="js/main.js"></script>
