changed the events in JS

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <h2 class="hidden">vector vs svg</h2>
       <h3>SVG as raster & vector</h3>
 
+      <button class="switch-type">Change headline text</button>
+
       <div id="image-container">
         <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG">
         <img src="images/newBadge.svg" alt="badge as vector - this is the svg" id="badgeSVG">
