js interactivity with multiselectors

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
       <button class="switch-type">Change headline text</button>
 
       <div id="image-container">
-        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG">
-        <img src="images/newBadge.svg" alt="badge as vector - this is the svg" id="badgeSVG">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG1">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG2">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG3">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG4">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG5">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG6">
+        <img src="images/newBadge.jpg" alt="badge as raster - this is the jpeg" id="badgeJPG7">
+
       </div>
     </section>
 
